# lgtv-rust

./: Cargo.toml
src/: cmd.rs  conn.rs  lib.rs  pairing.json  pairing_raw_mod.json  scan.rs
